cabal-version: 2.2
name: carbon-blaze-html
version: 0.1.0
build-type: Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: Text.Blaze.Carbon
  ghc-options: -Wall
               -Wcompat
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wredundant-constraints
               -Wno-missing-signatures
  build-depends: base
               , carbon-svg
               , blaze-html
               , blaze-markup
               , blaze-svg
               , text
