cabal-version: 2.2
name: carbon-pictograms
version: 0.1.0
build-type: Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: base
               , carbon-svg
  exposed-modules: Carbon.Pictograms
  other-modules:
    Carbon.Pictograms.PictogramAcceleratedComputing
    Carbon.Pictograms.PictogramActiveServer
    Carbon.Pictograms.PictogramAddDevice
    Carbon.Pictograms.PictogramAddDocument
    Carbon.Pictograms.PictogramAdvancedFraudProtection
    Carbon.Pictograms.PictogramAdvancedThreats
    Carbon.Pictograms.PictogramAdvocate
    Carbon.Pictograms.PictogramAgriculture
    Carbon.Pictograms.PictogramAirConditioner
    Carbon.Pictograms.PictogramAirplane
    Carbon.Pictograms.PictogramAlarm
    Carbon.Pictograms.PictogramAlchemyDataNews
    Carbon.Pictograms.PictogramAlchemyLanguage
    Carbon.Pictograms.PictogramAlchemyVision
    Carbon.Pictograms.PictogramAmericas
    Carbon.Pictograms.PictogramAmsterdamCanal
    Carbon.Pictograms.PictogramAmsterdamFarm
    Carbon.Pictograms.PictogramAmsterdamWindmill
    Carbon.Pictograms.PictogramAnalyze
    Carbon.Pictograms.PictogramAnalyzesData
    Carbon.Pictograms.PictogramAnonymousUsers
    Carbon.Pictograms.PictogramApartment
    Carbon.Pictograms.PictogramApi
    Carbon.Pictograms.PictogramAppDeveloper
    Carbon.Pictograms.PictogramApple
    Carbon.Pictograms.PictogramApplication
    Carbon.Pictograms.PictogramApplicationSecurity
    Carbon.Pictograms.PictogramArchive
    Carbon.Pictograms.PictogramAsiaAustralia
    Carbon.Pictograms.PictogramAssets
    Carbon.Pictograms.PictogramAtlanta
    Carbon.Pictograms.PictogramAugmentedReality
    Carbon.Pictograms.PictogramAustin
    Carbon.Pictograms.PictogramAutomateModularManagement
    Carbon.Pictograms.PictogramAutomationDecision
    Carbon.Pictograms.PictogramAutomobile
    Carbon.Pictograms.PictogramBabyBottle
    Carbon.Pictograms.PictogramBackpack
    Carbon.Pictograms.PictogramBag
    Carbon.Pictograms.PictogramBangalore
    Carbon.Pictograms.PictogramBarcelona
    Carbon.Pictograms.PictogramBee
    Carbon.Pictograms.PictogramBeijingMunicipal
    Carbon.Pictograms.PictogramBeijingTower
    Carbon.Pictograms.PictogramBerlinBrandenburgGate
    Carbon.Pictograms.PictogramBerlinCathedral
    Carbon.Pictograms.PictogramBerlinTower
    Carbon.Pictograms.PictogramBicycle
    Carbon.Pictograms.PictogramBirthdayCake
    Carbon.Pictograms.PictogramBlender
    Carbon.Pictograms.PictogramBlockchain
    Carbon.Pictograms.PictogramBostonZakimBridge
    Carbon.Pictograms.PictogramBoxPlot
    Carbon.Pictograms.PictogramBudapest
    Carbon.Pictograms.PictogramBugVirusMalware
    Carbon.Pictograms.PictogramBuild
    Carbon.Pictograms.PictogramBuildLeadershipAndCulture
    Carbon.Pictograms.PictogramBuilding
    Carbon.Pictograms.PictogramBulldozer
    Carbon.Pictograms.PictogramBus
    Carbon.Pictograms.PictogramBusinessContinuity
    Carbon.Pictograms.PictogramCPlusPlusLanguage
    Carbon.Pictograms.PictogramCLanguage
    Carbon.Pictograms.PictogramCafe
    Carbon.Pictograms.PictogramCairoGizaPlateau
    Carbon.Pictograms.PictogramCalendar
    Carbon.Pictograms.PictogramCalendarDate
    Carbon.Pictograms.PictogramCalendarEvent
    Carbon.Pictograms.PictogramCamera
    Carbon.Pictograms.PictogramCanadaMapleLeaf
    Carbon.Pictograms.PictogramCapitol
    Carbon.Pictograms.PictogramCare
    Carbon.Pictograms.PictogramCargoCrane
    Carbon.Pictograms.PictogramCargoShip
    Carbon.Pictograms.PictogramCell
    Carbon.Pictograms.PictogramChart_3D
    Carbon.Pictograms.PictogramChartArea
    Carbon.Pictograms.PictogramChartBar
    Carbon.Pictograms.PictogramChartBubble
    Carbon.Pictograms.PictogramChartBubbleLine
    Carbon.Pictograms.PictogramChartCandlestick
    Carbon.Pictograms.PictogramChartCustom
    Carbon.Pictograms.PictogramChartErrorBar
    Carbon.Pictograms.PictogramChartEvaluation
    Carbon.Pictograms.PictogramChartHighLow
    Carbon.Pictograms.PictogramChartHistogram
    Carbon.Pictograms.PictogramChartLine
    Carbon.Pictograms.PictogramChartMultiLine
    Carbon.Pictograms.PictogramChartMultiType
    Carbon.Pictograms.PictogramChartParallel
    Carbon.Pictograms.PictogramChartPie
    Carbon.Pictograms.PictogramChartRadar
    Carbon.Pictograms.PictogramChartRiver
    Carbon.Pictograms.PictogramChartScatterplot
    Carbon.Pictograms.PictogramChartStepper
    Carbon.Pictograms.PictogramChartSunburst
    Carbon.Pictograms.PictogramChartTSne
    Carbon.Pictograms.PictogramCheese
    Carbon.Pictograms.PictogramCherries
    Carbon.Pictograms.PictogramChicago
    Carbon.Pictograms.PictogramChipCircuit
    Carbon.Pictograms.PictogramChipCredit
    Carbon.Pictograms.PictogramChipDebit
    Carbon.Pictograms.PictogramCirclePacking
    Carbon.Pictograms.PictogramClientFinancing_01
    Carbon.Pictograms.PictogramClientFinancing_02
    Carbon.Pictograms.PictogramClothesRack_01
    Carbon.Pictograms.PictogramClothesRack_02
    Carbon.Pictograms.PictogramCloudAnalytics
    Carbon.Pictograms.PictogramCloudAssets
    Carbon.Pictograms.PictogramCloudBuilderProfessionalServices
    Carbon.Pictograms.PictogramCloudComputing
    Carbon.Pictograms.PictogramCloudDataServices
    Carbon.Pictograms.PictogramCloudDownload
    Carbon.Pictograms.PictogramCloudEcosystem
    Carbon.Pictograms.PictogramCloudGuidelines
    Carbon.Pictograms.PictogramCloudManagedServices
    Carbon.Pictograms.PictogramCloudOracle
    Carbon.Pictograms.PictogramCloudPartners
    Carbon.Pictograms.PictogramCloudPlanning
    Carbon.Pictograms.PictogramCloudSap
    Carbon.Pictograms.PictogramCloudServices
    Carbon.Pictograms.PictogramCloudServicesPricing
    Carbon.Pictograms.PictogramCloudStorage
    Carbon.Pictograms.PictogramCloudStrategy
    Carbon.Pictograms.PictogramCloudTutorials
    Carbon.Pictograms.PictogramCloudUpload
    Carbon.Pictograms.PictogramCloudVmware
    Carbon.Pictograms.PictogramCloudPakFamily
    Carbon.Pictograms.PictogramCloudPakForApplications
    Carbon.Pictograms.PictogramCloudPakForData
    Carbon.Pictograms.PictogramCloudPakForIntegration
    Carbon.Pictograms.PictogramCloudPakForMulticloudManagement
    Carbon.Pictograms.PictogramCloudPakForSecurity
    Carbon.Pictograms.PictogramCloudPakSystem
    Carbon.Pictograms.PictogramCloudy
    Carbon.Pictograms.PictogramCloudyDewy
    Carbon.Pictograms.PictogramCloudyHazy
    Carbon.Pictograms.PictogramCloudyHumid
    Carbon.Pictograms.PictogramCloudyPartial
    Carbon.Pictograms.PictogramCloudyWindy
    Carbon.Pictograms.PictogramCoatHanger
    Carbon.Pictograms.PictogramCobolLanguage
    Carbon.Pictograms.PictogramCodeSyntax
    Carbon.Pictograms.PictogramCognosAnalytics
    Carbon.Pictograms.PictogramCollaboration
    Carbon.Pictograms.PictogramCollege
    Carbon.Pictograms.PictogramColorContrast
    Carbon.Pictograms.PictogramCommercialFinancing_01
    Carbon.Pictograms.PictogramCommercialFinancing_02
    Carbon.Pictograms.PictogramConceptExpansion
    Carbon.Pictograms.PictogramConceptInsights
    Carbon.Pictograms.PictogramConditionBuilder
    Carbon.Pictograms.PictogramConnect
    Carbon.Pictograms.PictogramConnectedEcosystem
    Carbon.Pictograms.PictogramConnectedNodesToTheCloud
    Carbon.Pictograms.PictogramConsole
    Carbon.Pictograms.PictogramConsoleWireless
    Carbon.Pictograms.PictogramConstruct
    Carbon.Pictograms.PictogramConsumerEngagementFoodJourney
    Carbon.Pictograms.PictogramContainersAndCloudNative
    Carbon.Pictograms.PictogramContinuousSecurity
    Carbon.Pictograms.PictogramContract
    Carbon.Pictograms.PictogramConversation
    Carbon.Pictograms.PictogramCopenhagenPlanetarium
    Carbon.Pictograms.PictogramCopenhagenSnekkja
    Carbon.Pictograms.PictogramCoronavirus
    Carbon.Pictograms.PictogramCreditCard
    Carbon.Pictograms.PictogramCrop
    Carbon.Pictograms.PictogramCupcake
    Carbon.Pictograms.PictogramCustomerService
    Carbon.Pictograms.PictogramDashboard
    Carbon.Pictograms.PictogramDataApis
    Carbon.Pictograms.PictogramDataBackup
    Carbon.Pictograms.PictogramDataInsights
    Carbon.Pictograms.PictogramDataPrivacy
    Carbon.Pictograms.PictogramDataProcessing
    Carbon.Pictograms.PictogramDataSecurity
    Carbon.Pictograms.PictogramDataSet
    Carbon.Pictograms.PictogramDataStorage
    Carbon.Pictograms.PictogramDelete
    Carbon.Pictograms.PictogramDeliverInsights
    Carbon.Pictograms.PictogramDeliveryTruck
    Carbon.Pictograms.PictogramDesignAndDevelopment_01
    Carbon.Pictograms.PictogramDesignAndDevelopment_02
    Carbon.Pictograms.PictogramDesignThinkingTeam
    Carbon.Pictograms.PictogramDesktop
    Carbon.Pictograms.PictogramDetectAndStopAdvancingThreats
    Carbon.Pictograms.PictogramDeveloperZOs
    Carbon.Pictograms.PictogramDevicePairing
    Carbon.Pictograms.PictogramDevops
    Carbon.Pictograms.PictogramDialogue
    Carbon.Pictograms.PictogramDigital
    Carbon.Pictograms.PictogramDigitalId
    Carbon.Pictograms.PictogramDigitalTrust
    Carbon.Pictograms.PictogramDining
    Carbon.Pictograms.PictogramDistributionLedger
    Carbon.Pictograms.PictogramDna
    Carbon.Pictograms.PictogramDoNot
    Carbon.Pictograms.PictogramDocker
    Carbon.Pictograms.PictogramDoctor
    Carbon.Pictograms.PictogramDoctorPatient
    Carbon.Pictograms.PictogramDocumentConversion
    Carbon.Pictograms.PictogramDocumentSecurity
    Carbon.Pictograms.PictogramDoorHandle
    Carbon.Pictograms.PictogramDownload_01
    Carbon.Pictograms.PictogramDownload_02
    Carbon.Pictograms.PictogramDropper
    Carbon.Pictograms.PictogramDubaiPalmIslands
    Carbon.Pictograms.PictogramDubaiSkyscraper
    Carbon.Pictograms.PictogramDublinBrewery
    Carbon.Pictograms.PictogramDublinCastle
    Carbon.Pictograms.PictogramDuplicateFile
    Carbon.Pictograms.PictogramEarth
    Carbon.Pictograms.PictogramEducation
    Carbon.Pictograms.PictogramElectric
    Carbon.Pictograms.PictogramElectricCar
    Carbon.Pictograms.PictogramElectricCharge
    Carbon.Pictograms.PictogramElevator
    Carbon.Pictograms.PictogramEmbed
    Carbon.Pictograms.PictogramEmployeeInsights
    Carbon.Pictograms.PictogramEndpointProtection
    Carbon.Pictograms.PictogramEngine
    Carbon.Pictograms.PictogramEnterpriseDesignThinking_01
    Carbon.Pictograms.PictogramEnterpriseDesignThinking_02
    Carbon.Pictograms.PictogramEnvelope
    Carbon.Pictograms.PictogramErlenmeyerFlask
    Carbon.Pictograms.PictogramEscalatorDown
    Carbon.Pictograms.PictogramEscalatorUp
    Carbon.Pictograms.PictogramEuropeAfrica
    Carbon.Pictograms.PictogramExpandHorz
    Carbon.Pictograms.PictogramExpandUser
    Carbon.Pictograms.PictogramExpandVert
    Carbon.Pictograms.PictogramExport_01
    Carbon.Pictograms.PictogramExport_02
    Carbon.Pictograms.PictogramEye
    Carbon.Pictograms.PictogramFaceDissatisfied
    Carbon.Pictograms.PictogramFaceNeutral
    Carbon.Pictograms.PictogramFaceSatisfied
    Carbon.Pictograms.PictogramFaceVeryDissatisfied
    Carbon.Pictograms.PictogramFaceVerySatisfied
    Carbon.Pictograms.PictogramFactory
    Carbon.Pictograms.PictogramFarm_01
    Carbon.Pictograms.PictogramFarm_02
    Carbon.Pictograms.PictogramFarmer_01
    Carbon.Pictograms.PictogramFarmer_02
    Carbon.Pictograms.PictogramFaucet
    Carbon.Pictograms.PictogramFeedback_01
    Carbon.Pictograms.PictogramFeedback_02
    Carbon.Pictograms.PictogramFileBackup
    Carbon.Pictograms.PictogramFileTransfer
    Carbon.Pictograms.PictogramFilterVariable
    Carbon.Pictograms.PictogramFinanceStrategy
    Carbon.Pictograms.PictogramFinancialConsultant
    Carbon.Pictograms.PictogramFinancialGain
    Carbon.Pictograms.PictogramFinancialNetworks
    Carbon.Pictograms.PictogramFinancialNews
    Carbon.Pictograms.PictogramFireAlarm
    Carbon.Pictograms.PictogramFireExtinguisher
    Carbon.Pictograms.PictogramFirewall
    Carbon.Pictograms.PictogramFirstAid
    Carbon.Pictograms.PictogramFlashStorage
    Carbon.Pictograms.PictogramFlashingContent
    Carbon.Pictograms.PictogramFlowChart
    Carbon.Pictograms.PictogramFlowChartDetail
    Carbon.Pictograms.PictogramFlower_01
    Carbon.Pictograms.PictogramFlower_02
    Carbon.Pictograms.PictogramFog
    Carbon.Pictograms.PictogramFolder
    Carbon.Pictograms.PictogramForklift
    Carbon.Pictograms.PictogramFragile
    Carbon.Pictograms.PictogramFreeTrial
    Carbon.Pictograms.PictogramFuel
    Carbon.Pictograms.PictogramGear
    Carbon.Pictograms.PictogramGetAheadOfRiskAndCompliance
    Carbon.Pictograms.PictogramGift
    Carbon.Pictograms.PictogramGlobalAnalytics
    Carbon.Pictograms.PictogramGlobalAssetsAndRecovery_01
    Carbon.Pictograms.PictogramGlobalAssetsAndRecovery_02
    Carbon.Pictograms.PictogramGlobalBusinessServices
    Carbon.Pictograms.PictogramGlobalCurrency
    Carbon.Pictograms.PictogramGlobalExchange
    Carbon.Pictograms.PictogramGlobalFinanceEuro
    Carbon.Pictograms.PictogramGlobalFinanceNetwork
    Carbon.Pictograms.PictogramGlobalFinanceSterling
    Carbon.Pictograms.PictogramGlobalMarkets
    Carbon.Pictograms.PictogramGlobalMarketsBar
    Carbon.Pictograms.PictogramGlobalNetwork
    Carbon.Pictograms.PictogramGlobalPartner
    Carbon.Pictograms.PictogramGlobalSecurity
    Carbon.Pictograms.PictogramGlobalStrategy
    Carbon.Pictograms.PictogramGlobalTechnologyServices
    Carbon.Pictograms.PictogramGlobe
    Carbon.Pictograms.PictogramGlobeLocations
    Carbon.Pictograms.PictogramGoLanguage
    Carbon.Pictograms.PictogramGoals
    Carbon.Pictograms.PictogramGovernUsersAndIdentities
    Carbon.Pictograms.PictogramGroup
    Carbon.Pictograms.PictogramGrowth
    Carbon.Pictograms.PictogramHail
    Carbon.Pictograms.PictogramHailHeavy
    Carbon.Pictograms.PictogramHailMixed
    Carbon.Pictograms.PictogramHamburgPhilharmone
    Carbon.Pictograms.PictogramHandicap
    Carbon.Pictograms.PictogramHandicapActive
    Carbon.Pictograms.PictogramHardDrive
    Carbon.Pictograms.PictogramHardDriveNetwork
    Carbon.Pictograms.PictogramHardIceCream
    Carbon.Pictograms.PictogramHazy
    Carbon.Pictograms.PictogramHeadphones
    Carbon.Pictograms.PictogramHeart
    Carbon.Pictograms.PictogramHeartHealth
    Carbon.Pictograms.PictogramHeatMap_01
    Carbon.Pictograms.PictogramHeatMap_02
    Carbon.Pictograms.PictogramHighFive
    Carbon.Pictograms.PictogramHighRiskUsers
    Carbon.Pictograms.PictogramHills
    Carbon.Pictograms.PictogramHomeFront
    Carbon.Pictograms.PictogramHomeGarage
    Carbon.Pictograms.PictogramHomeProfile
    Carbon.Pictograms.PictogramHospital
    Carbon.Pictograms.PictogramHpi
    Carbon.Pictograms.PictogramHumid
    Carbon.Pictograms.PictogramHurricane
    Carbon.Pictograms.PictogramHybridCloud
    Carbon.Pictograms.PictogramHybridCloud_02
    Carbon.Pictograms.PictogramHybridCloudServices
    Carbon.Pictograms.PictogramIbmAutomationPlatform
    Carbon.Pictograms.PictogramIbmCloud
    Carbon.Pictograms.PictogramIbmIx
    Carbon.Pictograms.PictogramIbmZ
    Carbon.Pictograms.PictogramIbmZAndLinuxoneMultiFrame
    Carbon.Pictograms.PictogramIbmZAndLinuxoneSingleFrame
    Carbon.Pictograms.PictogramIbmZPartition
    Carbon.Pictograms.PictogramIdBadge
    Carbon.Pictograms.PictogramIdea
    Carbon.Pictograms.PictogramIdeate
    Carbon.Pictograms.PictogramIdentityTrustAssessment
    Carbon.Pictograms.PictogramInfrastructureSecurity
    Carbon.Pictograms.PictogramInnovate
    Carbon.Pictograms.PictogramInsights
    Carbon.Pictograms.PictogramInspectData
    Carbon.Pictograms.PictogramIntegration
    Carbon.Pictograms.PictogramIntelligence
    Carbon.Pictograms.PictogramIntercom
    Carbon.Pictograms.PictogramIotMunich
    Carbon.Pictograms.PictogramItInfrastructureSoftware
    Carbon.Pictograms.PictogramJava
    Carbon.Pictograms.PictogramJavascript
    Carbon.Pictograms.PictogramJustice
    Carbon.Pictograms.PictogramKeepDry
    Carbon.Pictograms.PictogramKeyUsers
    Carbon.Pictograms.PictogramKeyboard
    Carbon.Pictograms.PictogramKnowsDarkData
    Carbon.Pictograms.PictogramKualaLumpur
    Carbon.Pictograms.PictogramLanguage_01
    Carbon.Pictograms.PictogramLanguage_02
    Carbon.Pictograms.PictogramLanguage_03
    Carbon.Pictograms.PictogramLanguage_04
    Carbon.Pictograms.PictogramLanguage_05
    Carbon.Pictograms.PictogramLanguageTranslation
    Carbon.Pictograms.PictogramLaunch
    Carbon.Pictograms.PictogramLightning
    Carbon.Pictograms.PictogramListBullet
    Carbon.Pictograms.PictogramListCheckbox
    Carbon.Pictograms.PictogramLocation
    Carbon.Pictograms.PictogramLock_01
    Carbon.Pictograms.PictogramLock_02
    Carbon.Pictograms.PictogramLockedNetwork_01
    Carbon.Pictograms.PictogramLockedNetwork_02
    Carbon.Pictograms.PictogramLondon
    Carbon.Pictograms.PictogramLondonBigBen
    Carbon.Pictograms.PictogramLove
    Carbon.Pictograms.PictogramLungs
    Carbon.Pictograms.PictogramMachineLearning_01
    Carbon.Pictograms.PictogramMachineLearning_02
    Carbon.Pictograms.PictogramMachineLearning_03
    Carbon.Pictograms.PictogramMachineLearning_04
    Carbon.Pictograms.PictogramMachineLearning_05
    Carbon.Pictograms.PictogramMachineLearning_06
    Carbon.Pictograms.PictogramMadridCathedral
    Carbon.Pictograms.PictogramMadridSkyscrapers
    Carbon.Pictograms.PictogramMadridStatue
    Carbon.Pictograms.PictogramMagnify
    Carbon.Pictograms.PictogramManagingContractualFlow
    Carbon.Pictograms.PictogramManagingItems
    Carbon.Pictograms.PictogramMarketplace
    Carbon.Pictograms.PictogramMas
    Carbon.Pictograms.PictogramMasterThreatHunting
    Carbon.Pictograms.PictogramMathCurve
    Carbon.Pictograms.PictogramMaximize
    Carbon.Pictograms.PictogramMedical
    Carbon.Pictograms.PictogramMedicalCharts
    Carbon.Pictograms.PictogramMedicalStaff
    Carbon.Pictograms.PictogramMelbourne
    Carbon.Pictograms.PictogramMeter
    Carbon.Pictograms.PictogramMexicoCityAngelOfIndependence
    Carbon.Pictograms.PictogramMexicoCityMuseoSoumaya
    Carbon.Pictograms.PictogramMicroorganisms
    Carbon.Pictograms.PictogramMicroscope
    Carbon.Pictograms.PictogramMilanDuomoDiMilano
    Carbon.Pictograms.PictogramMilanSkyscrapers
    Carbon.Pictograms.PictogramMinimize
    Carbon.Pictograms.PictogramMobileAdd
    Carbon.Pictograms.PictogramMobileChat
    Carbon.Pictograms.PictogramMobileDevices
    Carbon.Pictograms.PictogramMobilePhone
    Carbon.Pictograms.PictogramMonitoredItemOnConveyor
    Carbon.Pictograms.PictogramMortarAndPestle
    Carbon.Pictograms.PictogramMoscow
    Carbon.Pictograms.PictogramMovementInOverlappingNetworks
    Carbon.Pictograms.PictogramMovementOfGoods_01
    Carbon.Pictograms.PictogramMovementOfGoods_02
    Carbon.Pictograms.PictogramMovementOfGoods_03
    Carbon.Pictograms.PictogramMovementOfItems
    Carbon.Pictograms.PictogramMqa
    Carbon.Pictograms.PictogramMri
    Carbon.Pictograms.PictogramMriPatient
    Carbon.Pictograms.PictogramMultitask
    Carbon.Pictograms.PictogramMunich
    Carbon.Pictograms.PictogramNaturalLanguageClassifier
    Carbon.Pictograms.PictogramNaturalLanguageUnderstanding
    Carbon.Pictograms.PictogramNetwork
    Carbon.Pictograms.PictogramNetworkProtection
    Carbon.Pictograms.PictogramNetworkServices
    Carbon.Pictograms.PictogramNetworking_01
    Carbon.Pictograms.PictogramNetworking_02
    Carbon.Pictograms.PictogramNetworking_03
    Carbon.Pictograms.PictogramNetworking_04
    Carbon.Pictograms.PictogramNetworking_05
    Carbon.Pictograms.PictogramNetworking_06
    Carbon.Pictograms.PictogramNice
    Carbon.Pictograms.PictogramNightClear
    Carbon.Pictograms.PictogramNycBrooklyn
    Carbon.Pictograms.PictogramNycChryslerBuilding
    Carbon.Pictograms.PictogramNycManhattan_01
    Carbon.Pictograms.PictogramNycManhattan_02
    Carbon.Pictograms.PictogramNycStatueOfLiberty
    Carbon.Pictograms.PictogramNycWorldTradeCenter
    Carbon.Pictograms.PictogramOffice
    Carbon.Pictograms.PictogramOilPump
    Carbon.Pictograms.PictogramOilRig
    Carbon.Pictograms.PictogramOkinawa
    Carbon.Pictograms.PictogramOptimizeCashFlow_01
    Carbon.Pictograms.PictogramOptimizeCashFlow_02
    Carbon.Pictograms.PictogramOvercast
    Carbon.Pictograms.PictogramPaperClip
    Carbon.Pictograms.PictogramParisArcDeTriomphe
    Carbon.Pictograms.PictogramParisLouvre
    Carbon.Pictograms.PictogramParisNotreDame
    Carbon.Pictograms.PictogramParisPompidouCenter
    Carbon.Pictograms.PictogramParliament
    Carbon.Pictograms.PictogramPartnerRelationship
    Carbon.Pictograms.PictogramPath
    Carbon.Pictograms.PictogramPattern
    Carbon.Pictograms.PictogramPerfume
    Carbon.Pictograms.PictogramPerson_01
    Carbon.Pictograms.PictogramPerson_02
    Carbon.Pictograms.PictogramPerson_03
    Carbon.Pictograms.PictogramPerson_04
    Carbon.Pictograms.PictogramPerson_05
    Carbon.Pictograms.PictogramPerson_06
    Carbon.Pictograms.PictogramPerson_07
    Carbon.Pictograms.PictogramPerson_08
    Carbon.Pictograms.PictogramPerson_09
    Carbon.Pictograms.PictogramPersonalityInsights
    Carbon.Pictograms.PictogramPetriCulture
    Carbon.Pictograms.PictogramPillBottle_01
    Carbon.Pictograms.PictogramPhpLanguage
    Carbon.Pictograms.PictogramPills
    Carbon.Pictograms.PictogramPlanningAnalytics
    Carbon.Pictograms.PictogramPlayerFlow
    Carbon.Pictograms.PictogramPliLanguage
    Carbon.Pictograms.PictogramPodcast
    Carbon.Pictograms.PictogramPolice
    Carbon.Pictograms.PictogramPopulationDiagram
    Carbon.Pictograms.PictogramPower
    Carbon.Pictograms.PictogramPragueCharlesBridgeTower
    Carbon.Pictograms.PictogramPragueDancingHouse_01
    Carbon.Pictograms.PictogramPragueDancingHouse_02
    Carbon.Pictograms.PictogramPregnant
    Carbon.Pictograms.PictogramPrescription
    Carbon.Pictograms.PictogramPresentation
    Carbon.Pictograms.PictogramPresenter
    Carbon.Pictograms.PictogramPrice
    Carbon.Pictograms.PictogramPrinter
    Carbon.Pictograms.PictogramPrivateNetwork_01
    Carbon.Pictograms.PictogramPrivateNetwork_02
    Carbon.Pictograms.PictogramPrivateNetwork_03
    Carbon.Pictograms.PictogramPrivateNetwork_04
    Carbon.Pictograms.PictogramProcess
    Carbon.Pictograms.PictogramProgress
    Carbon.Pictograms.PictogramProtectCriticalAssets
    Carbon.Pictograms.PictogramPuzzle
    Carbon.Pictograms.PictogramQQPlot
    Carbon.Pictograms.PictogramQrCode
    Carbon.Pictograms.PictogramQuestion
    Carbon.Pictograms.PictogramQuestionAndAnswer
    Carbon.Pictograms.PictogramRLanguage
    Carbon.Pictograms.PictogramRacetrack
    Carbon.Pictograms.PictogramRainy
    Carbon.Pictograms.PictogramRainyHeavy
    Carbon.Pictograms.PictogramRaleighNc
    Carbon.Pictograms.PictogramRandomSamples
    Carbon.Pictograms.PictogramRank
    Carbon.Pictograms.PictogramReceipt
    Carbon.Pictograms.PictogramRecycle
    Carbon.Pictograms.PictogramRefinery
    Carbon.Pictograms.PictogramRefresh
    Carbon.Pictograms.PictogramRelationshipDiagram
    Carbon.Pictograms.PictogramRelationshipExtraction
    Carbon.Pictograms.PictogramRenew
    Carbon.Pictograms.PictogramRenewTeam
    Carbon.Pictograms.PictogramRepeat
    Carbon.Pictograms.PictogramReport
    Carbon.Pictograms.PictogramResearch
    Carbon.Pictograms.PictogramReset
    Carbon.Pictograms.PictogramResetHybridCloud
    Carbon.Pictograms.PictogramResetSettings
    Carbon.Pictograms.PictogramRetrieveAndRank
    Carbon.Pictograms.PictogramRichTextFormat
    Carbon.Pictograms.PictogramRioDeJaneiro
    Carbon.Pictograms.PictogramRobot
    Carbon.Pictograms.PictogramRobotics
    Carbon.Pictograms.PictogramRockOn
    Carbon.Pictograms.PictogramRome
    Carbon.Pictograms.PictogramSaasEnablement
    Carbon.Pictograms.PictogramSampleFile
    Carbon.Pictograms.PictogramSanFrancisco
    Carbon.Pictograms.PictogramSanFranciscoFog
    Carbon.Pictograms.PictogramSaoPaulo
    Carbon.Pictograms.PictogramSapHana
    Carbon.Pictograms.PictogramSatellite
    Carbon.Pictograms.PictogramSatelliteDish
    Carbon.Pictograms.PictogramScale
    Carbon.Pictograms.PictogramScatterMatrix
    Carbon.Pictograms.PictogramSeattle
    Carbon.Pictograms.PictogramSecureData
    Carbon.Pictograms.PictogramSecureHybridCloud
    Carbon.Pictograms.PictogramSecureProfile
    Carbon.Pictograms.PictogramSecurity
    Carbon.Pictograms.PictogramSecurityAsAService
    Carbon.Pictograms.PictogramSecurityHygiene
    Carbon.Pictograms.PictogramSecurityIntelligence
    Carbon.Pictograms.PictogramSecurityShield
    Carbon.Pictograms.PictogramSelectRange
    Carbon.Pictograms.PictogramServerOperatingSystems
    Carbon.Pictograms.PictogramServerRack
    Carbon.Pictograms.PictogramServers
    Carbon.Pictograms.PictogramShirt
    Carbon.Pictograms.PictogramShop
    Carbon.Pictograms.PictogramShoppingCart
    Carbon.Pictograms.PictogramShower
    Carbon.Pictograms.PictogramSingapore
    Carbon.Pictograms.PictogramSingleSignOn
    Carbon.Pictograms.PictogramSlack
    Carbon.Pictograms.PictogramSlider
    Carbon.Pictograms.PictogramSneaker
    Carbon.Pictograms.PictogramSnow
    Carbon.Pictograms.PictogramSocialWork_01
    Carbon.Pictograms.PictogramSocialWork_02
    Carbon.Pictograms.PictogramSocks
    Carbon.Pictograms.PictogramSoftIceCream
    Carbon.Pictograms.PictogramSoftlayerEnablement
    Carbon.Pictograms.PictogramSolarField
    Carbon.Pictograms.PictogramSolarPanel
    Carbon.Pictograms.PictogramSolve
    Carbon.Pictograms.PictogramSpaceship
    Carbon.Pictograms.PictogramSpeech
    Carbon.Pictograms.PictogramSpeechToText
    Carbon.Pictograms.PictogramSpeedometer
    Carbon.Pictograms.PictogramSports
    Carbon.Pictograms.PictogramStackLimitation
    Carbon.Pictograms.PictogramStairsPlanView
    Carbon.Pictograms.PictogramStationaryBicycle
    Carbon.Pictograms.PictogramSteel
    Carbon.Pictograms.PictogramSteeringWheel
    Carbon.Pictograms.PictogramStemLeafPlot
    Carbon.Pictograms.PictogramStethoscope
    Carbon.Pictograms.PictogramStockholm
    Carbon.Pictograms.PictogramStorageAreaNetworks
    Carbon.Pictograms.PictogramStorageProduct
    Carbon.Pictograms.PictogramStrategy
    Carbon.Pictograms.PictogramStrategyAndRisk
    Carbon.Pictograms.PictogramStrategyDirect
    Carbon.Pictograms.PictogramStrategyMove
    Carbon.Pictograms.PictogramStrategyPlay
    Carbon.Pictograms.PictogramStreamline
    Carbon.Pictograms.PictogramSummit
    Carbon.Pictograms.PictogramSunny
    Carbon.Pictograms.PictogramSunnyHazy
    Carbon.Pictograms.PictogramSupplyChainOptimization_01
    Carbon.Pictograms.PictogramSupplyChainOptimization_02
    Carbon.Pictograms.PictogramSupportServices
    Carbon.Pictograms.PictogramSwipeLeft
    Carbon.Pictograms.PictogramSwipeRight
    Carbon.Pictograms.PictogramSystemsDevopsAnalyze
    Carbon.Pictograms.PictogramSystemsDevopsBuild
    Carbon.Pictograms.PictogramSystemsDevopsCicdPipeline
    Carbon.Pictograms.PictogramSystemsDevopsCode
    Carbon.Pictograms.PictogramSystemsDevopsDeploy
    Carbon.Pictograms.PictogramSystemsDevopsMonitor
    Carbon.Pictograms.PictogramSystemsDevopsPlan
    Carbon.Pictograms.PictogramSystemsDevopsProvision
    Carbon.Pictograms.PictogramSystemsDevopsRelease
    Carbon.Pictograms.PictogramSystemsDevopsTest
    Carbon.Pictograms.PictogramTShirt
    Carbon.Pictograms.PictogramTags
    Carbon.Pictograms.PictogramTapeStorage
    Carbon.Pictograms.PictogramTarget
    Carbon.Pictograms.PictogramTargetArea
    Carbon.Pictograms.PictogramTeamAlignment
    Carbon.Pictograms.PictogramTeammates
    Carbon.Pictograms.PictogramTelAviv
    Carbon.Pictograms.PictogramTelecom
    Carbon.Pictograms.PictogramTelemedicine
    Carbon.Pictograms.PictogramTelemedicineMobile
    Carbon.Pictograms.PictogramTelephone
    Carbon.Pictograms.PictogramTelevision
    Carbon.Pictograms.PictogramTemperatureHigh
    Carbon.Pictograms.PictogramTemperatureLow
    Carbon.Pictograms.PictogramTennis
    Carbon.Pictograms.PictogramTestTubes
    Carbon.Pictograms.PictogramTextToSpeech
    Carbon.Pictograms.PictogramTextEquivalent
    Carbon.Pictograms.PictogramTextInput
    Carbon.Pictograms.PictogramTextLayout
    Carbon.Pictograms.PictogramThisSideUp
    Carbon.Pictograms.PictogramThreatManagement
    Carbon.Pictograms.PictogramTime
    Carbon.Pictograms.PictogramTimeLapse
    Carbon.Pictograms.PictogramTimePlot
    Carbon.Pictograms.PictogramToggle
    Carbon.Pictograms.PictogramTokyoCherryBlossom
    Carbon.Pictograms.PictogramTokyoGates
    Carbon.Pictograms.PictogramTokyoTemple
    Carbon.Pictograms.PictogramTokyoVolcano
    Carbon.Pictograms.PictogramToneAnalyzer
    Carbon.Pictograms.PictogramToolOverload
    Carbon.Pictograms.PictogramTools
    Carbon.Pictograms.PictogramTornado
    Carbon.Pictograms.PictogramToronto
    Carbon.Pictograms.PictogramTouch
    Carbon.Pictograms.PictogramTouchGesture
    Carbon.Pictograms.PictogramTouchId
    Carbon.Pictograms.PictogramTouchScreen
    Carbon.Pictograms.PictogramTouchSwipe
    Carbon.Pictograms.PictogramTractor
    Carbon.Pictograms.PictogramTradeoffAnalytics
    Carbon.Pictograms.PictogramTrain
    Carbon.Pictograms.PictogramTransactionalBlockchain
    Carbon.Pictograms.PictogramTransactionalTrust
    Carbon.Pictograms.PictogramTransform_01
    Carbon.Pictograms.PictogramTransform_02
    Carbon.Pictograms.PictogramTransparency_01
    Carbon.Pictograms.PictogramTransparency_02
    Carbon.Pictograms.PictogramTrash
    Carbon.Pictograms.PictogramTree
    Carbon.Pictograms.PictogramTreeDiagram
    Carbon.Pictograms.PictogramTreeMap
    Carbon.Pictograms.PictogramTrousers
    Carbon.Pictograms.PictogramTrust
    Carbon.Pictograms.PictogramTrustedUser
    Carbon.Pictograms.PictogramTwoPersonLift
    Carbon.Pictograms.PictogramUnauthorizedUserAccess
    Carbon.Pictograms.PictogramUnderUtilizedSecurity
    Carbon.Pictograms.PictogramUnifyEndpointManagement
    Carbon.Pictograms.PictogramUniversity
    Carbon.Pictograms.PictogramUnlock_01
    Carbon.Pictograms.PictogramUnlock_02
    Carbon.Pictograms.PictogramUpload_01
    Carbon.Pictograms.PictogramUpload_02
    Carbon.Pictograms.PictogramUser
    Carbon.Pictograms.PictogramUserAnalytics
    Carbon.Pictograms.PictogramUserInsights
    Carbon.Pictograms.PictogramUserInterface
    Carbon.Pictograms.PictogramUserProfile
    Carbon.Pictograms.PictogramUserSearch
    Carbon.Pictograms.PictogramVancouver
    Carbon.Pictograms.PictogramVideo_01
    Carbon.Pictograms.PictogramVideo_02
    Carbon.Pictograms.PictogramVideoChat
    Carbon.Pictograms.PictogramVideoPlay
    Carbon.Pictograms.PictogramVirus
    Carbon.Pictograms.PictogramVision
    Carbon.Pictograms.PictogramVisualInsights
    Carbon.Pictograms.PictogramVisualRecognition
    Carbon.Pictograms.PictogramWarning_01
    Carbon.Pictograms.PictogramWarning_02
    Carbon.Pictograms.PictogramWasher
    Carbon.Pictograms.PictogramWashingtonDc
    Carbon.Pictograms.PictogramWashingtonDcCapitol
    Carbon.Pictograms.PictogramWashingtonDcMonument
    Carbon.Pictograms.PictogramWatsonLogo
    Carbon.Pictograms.PictogramWeather
    Carbon.Pictograms.PictogramWebDeveloper
    Carbon.Pictograms.PictogramWebcast
    Carbon.Pictograms.PictogramWeddingCake
    Carbon.Pictograms.PictogramWheat
    Carbon.Pictograms.PictogramWifi
    Carbon.Pictograms.PictogramWindPower
    Carbon.Pictograms.PictogramWindows
    Carbon.Pictograms.PictogramWindy
    Carbon.Pictograms.PictogramWine
    Carbon.Pictograms.PictogramWirelessHome
    Carbon.Pictograms.PictogramWirelessModem
    Carbon.Pictograms.PictogramWordCloud
    Carbon.Pictograms.PictogramWorldCommunityGrid
    Carbon.Pictograms.PictogramWreckingBall
    Carbon.Pictograms.PictogramXRay_01
    Carbon.Pictograms.PictogramXRay_02
    Carbon.Pictograms.PictogramYoga_01
    Carbon.Pictograms.PictogramYoga_02
    Carbon.Pictograms.PictogramYoga_03
    Carbon.Pictograms.PictogramYoga_04