cabal-version: 2.2
name: carbon-tools
version: 0.1.0
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules: Carbon.Tools
  default-language: Haskell2010
  ghc-options: -Wall
               -Wcompat
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wredundant-constraints
               -Wno-missing-signatures
  build-depends: aeson
               , base
               , bytestring
               , carbon-svg
               , casing
               , neat-interpolation
               , text
              
executable icons
  hs-source-dirs: bin
  main-is: GenerateIcons.hs
  default-language: Haskell2010
  build-depends: base
               , carbon-tools

executable pictograms
  hs-source-dirs: bin
  main-is: GeneratePictograms.hs
  default-language: Haskell2010
  build-depends: base
               , carbon-tools

executable lucid
  hs-source-dirs: bin
  main-is: GenerateLucid.hs
  default-language: Haskell2010
  build-depends: base
               , carbon-tools
               