cabal-version: 2.2
name: lucid-carbon-pictograms
version: 0.1.0
build-type: Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: Lucid.Carbon.Pictograms
  ghc-options: -Wall
               -Wcompat
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wredundant-constraints
               -Wno-missing-signatures
  build-depends: base
               , lucid-svg
